<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lsinf1225.groupeo.uclove.AccountCreation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/account_creation_intro"
                android:id="@+id/account_creation_intro"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:paddingBottom="10dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/account_creation_username"
                android:ems="10"
                android:id="@+id/account_creation_username"
                android:layout_below="@+id/account_creation_intro"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/account_creation_password"
                android:ems="10"
                android:id="@+id/account_creation_password"
                android:layout_below="@+id/account_creation_username"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_picture"
                android:onClick="takePicture"
                android:id="@+id/account_creation_upload_picture"
                android:layout_below="@+id/account_creation_password"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:ems="10"
                android:id="@+id/account_creation_first_name"
                android:layout_below="@+id/account_creation_upload_picture"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:ems="10"
                android:id="@+id/account_creation_last_name"
                android:layout_below="@+id/account_creation_first_name"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:ems="10"
                android:id="@+id/account_creation_city"
                android:layout_below="@+id/account_creation_last_name"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_birth_date"
                android:onClick="showDatePickerDialog"
                android:id="@+id/account_creation_birth_date"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/account_creation_city"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/account_creation_language"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:entries="@array/language"
                android:layout_below="@+id/account_creation_birth_date"
                android:layout_centerHorizontal="true"
                android:gravity="center">
            </Spinner>

            <Spinner
                android:id="@+id/account_creation_hair_color"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:entries="@array/hair_color"
                android:layout_below="@+id/account_creation_language"
                android:layout_centerHorizontal="true"
                android:gravity="center">
            </Spinner>

            <Spinner
                android:id="@+id/account_creation_hair_type"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:entries="@array/hair_type"
                android:layout_below="@+id/account_creation_hair_color"
                android:layout_centerHorizontal="true"
                android:gravity="center">
            </Spinner>

            <Spinner
                android:id="@+id/account_creation_eyes_color"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:entries="@array/eyes_color"
                android:layout_below="@+id/account_creation_hair_type"
                android:layout_centerHorizontal="true"
                android:gravity="center">
            </Spinner>

            <Spinner
                android:id="@+id/account_creation_sex"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:entries="@array/sex"
                android:layout_below="@+id/account_creation_eyes_color"
                android:layout_centerHorizontal="true"
                android:gravity="center">
            </Spinner>

            <Spinner
                android:id="@+id/account_creation_sexuality"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:entries="@array/sexuality"
                android:layout_below="@+id/account_creation_sex"
                android:layout_centerHorizontal="true"
                android:gravity="center">
            </Spinner>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:id="@+id/account_creation_send_info"
                android:layout_below="@+id/account_creation_sexuality"
                android:layout_centerHorizontal="true"
                android:onClick="createAccount"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
